cmake_minimum_required(VERSION 3.20)
project(0920)

set(CMAKE_CXX_STANDARD 14)

add_executable(0920
        binary2demical.cpp
        hanoi.cpp
        "last i word length.cpp"
        longest-common-suffix.cpp
        matrix_operation.cpp
        part_mul.cpp
        rotate_numbers.cpp
        special_elem.cpp
        stock_price.cpp
        words_count.cpp)
