cmake_minimum_required(VERSION 3.20)
project(1004)

set(CMAKE_CXX_STANDARD 14)

add_executable(ArrayList ArrayList.cpp)
add_executable(basic_interpreter basic_interpreter.cpp)
add_executable(BFintepreter BFintepreter.cpp)
add_executable(circleToPrint circleToPrint.cpp)
add_executable(mountaineering_steps mountaineering_steps.cpp)
add_executable(matrixRotate matrixRotate.cpp)
add_executable(overlap overlap.cpp)
add_executable(joseph joseph.cpp)
add_executable(reflect reflect.cpp)