cmake_minimum_required(VERSION 3.20)
project(1018)

set(CMAKE_CXX_STANDARD 14)

add_executable(cal cal.cpp)
add_executable(doubleStack doubleStack.cpp)
add_executable(hashmap hashmap.cpp)
add_executable(integer_calculater integer_calculater.cpp)
add_executable(integer_calculater_fp integer_calculater_fp.cpp)
